<resources>
    <string name="nome_pessoa">Nome: </string>
    <string name="nome_idioma">Idioma: </string>
    <string name="txt_ingles">Inglês</string>
    <string name="txt_alemao">Alemão</string>
    <string name="txt_titulo">Título</string>
    <string name="txt_subtitulo">Título 2</string>
    <string name="txt_btn_ok">OK</string>
    <string name="nome_curso">Android</string>
    <string name="btn2">Sim</string>
    <string name="btn3">Nao</string>

    <string name="rotuloCurso">Marque o(s) curso(s) de interesse</string>
    <string name="rotuloInfo">Deseja receber mais informações?</string>
    <string name="checkbox1">Android básico</string>
    <string name="checkbox2">Android intermediário</string>
    <string name="checkbox3">Android avançado</string>
    <string name="txtSim">Sim</string>
    <string name="txtNao">Não</string>
    <string name="btnOk">OK</string>
    <string name="txtResposta">Resposta:</string>

    <string name="titulo">1º - selecione a área de atuação</string>
    <string name="txtSelecionar">Selecionar</string>
    <string name="txtRotulo">2º - Informe as suas habilidades</string>
    <string name="txtAdd">Add +</string>
    <string name="txtObs">Obs.: clique no item para removê-lo</string>
    <string name="txtadicionar">Adicionar</string>
    <string name="txtdeletar">Deletar</string>
    <string name="txteditar">Editar</string>
    <string name="txtsalvar">Salvar</string>
    <string name="txtajuda">Ajuda</string>
    <string name="btnData">Selecionar a data</string>

    <string name="app_name">Intents</string>
    <string name="btnLigar">Ligar</string>
    <string name="txtLabelTelefone">Informe um número de telefone:</string>

    <string name="txtLabelNome">Informe seu nome:</string>
    <string name="txtLabelCurso">Informe o curso:</string>
    <string name="txtBtnProximo">Próximo</string>
    <string name="txtBtnVoltar">Voltar</string>

    <string name="txtFinalizar">Finalizar</string>
    <string name="btnTextAvaliar">Avaliar</string>

</resources>
