<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/txtadicionar"
            android:id="@+id/menuAdd"
            android:icon="@android:drawable/ic_menu_add"/>
    <item android:title="@string/txtdeletar"
            android:id="@+id/menuDeletar"
            android:icon="@android:drawable/ic_menu_delete"/>
    <item android:title="@string/txteditar"
            android:id="@+id/menuEditar"
            android:icon="@android:drawable/ic_menu_edit"/>
    <item android:title="@string/txtsalvar"
            android:id="@+id/menuSalvar"
            android:icon="@android:drawable/ic_menu_save"/>
    <item android:title="@string/txtajuda"
            android:id="@+id/menuAjuda"
            android:icon="@android:drawable/ic_menu_help"/>
    <item android:title="Item" >
        <menu >
            <item android:title="Item" />
            <item android:title="Item" />
            <item android:title="Item" />
        </menu>
    </item>
</menu>
