<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ListViewSpinner">

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitulo"
            android:textSize="16sp"
            android:text="@string/titulo"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

        <Spinner
                android:id="@+id/mSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnSelecionar"
                android:text="@string/txtSelecionar"
                android:layout_weight="1"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rotulo"
            android:text="@string/txtRotulo"
            android:textColor="@color/colorCinza"
            android:textSize="16sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_weight="4"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnAdd"
                android:text="@string/txtAdd"
                android:layout_weight="1"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtObs"
            android:text="@string/txtObs"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorAzul"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSelecionado"
            android:text=""
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorVerde"/>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"/>

</LinearLayout>
